Adjust accounts put requests to use DTOs and final fixes to documentation
